# sahib-bain-13c6-marketlens

./: .env.example  .gitignore  .plan  Cargo.toml  README.md  deploy-server.mjs
backend/: Cargo.toml
backend/migrations/: 20260720224500_baseline.sql  20260720230400_create_users.sql  20260720231600_create_email_verification_tokens.sql  20260720232900_create_price_series_cache.sql  20260720235000_create_instruments.sql  20260721001000_create_view_history.sql  20260721002000_create_instrument_popularity.sql  20260721003000_create_fundamentals.sql  20260721005000_create_watchlists.sql  20260721010000_create_alert_rules.sql  20260721011000_create_alert_rule_triggers.sql  20260721012000_add_alert_delivery_state.sql  20260721013000_create_news_articles.sql  20260721014000_create_estimator_reports.sql  20260721232500_allow_crypto_instruments.sql
backend/src/: alert_evaluation.rs  alerts.rs  analytics.rs  auth.rs  config.rs  db.rs  email.rs  estimator.rs  fundamentals.rs  ingestion.rs  instrument_filter.rs  instrument_search.rs  instruments.rs  main.rs  market_data.rs  news.rs  popularity.rs  redis.rs  routes.rs  series.rs  state.rs  timeframe.rs  users.rs  view_history.rs  watchlists.rs  ws.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: marketlens-flow.spec.ts
frontend/src/: App.css  App.tsx  instruments.ts  realtime.ts  session.ts
frontend/src/components/: AppShell.tsx  OverlayComparisonChart.tsx  Panel.tsx
frontend/src/theme/: retro-neon.css
